core:flask setup

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,25 +12,18 @@
     <title>CLook | MOOC Look Up</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static',filename='vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="{{ url_for('static',filename='vendor/magnific-popup/magnific-popup.css') }}" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="{{ url_for('static',filename='css/creative.min.css') }}" rel="stylesheet">
 
 </head>
 
@@ -146,8 +139,8 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="{{ url_for('static',filename='img/portfolio/fullsize/1.jpg') }}" class="portfolio-box">
+                        <img src="{{ ur_for('static',filename='img/portfolio/thumbnails/1.jpg') }}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -161,8 +154,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="{{ url_for('static',filename='img/portfolio/fullsize/2.jpg') }}" class="portfolio-box">
+                        <img src="{{ url_for('static',filename='img/portfolio/thumbnails/2.jpg') }}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -176,8 +169,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="{{ url_for('static',filename='img/portfolio/fullsize/3.jpg') }}" class="portfolio-box">
+                        <img src="{{ url_for('static',filename='img/portfolio/thumbnails/3.jpg) }}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -191,8 +184,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="static/img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                        <img src="static/img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -206,8 +199,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="static/img/portfolio/fullsize/5.jpg" class="portfolio-box">
+                        <img src="static/img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -221,8 +214,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="static/img/portfolio/fullsize/6.jpg" class="portfolio-box">
+                        <img src="static',filename='img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -244,7 +237,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Find the best course for free!</h2>
-                <a href="trial.html" class="btn btn-default btn-xl sr-button">Try it Out!</a>
+                <a href="http://127.0.0.1:5000/trial/" class="btn btn-default btn-xl sr-button">Try it Out!</a>
             </div>
         </div>
     </aside>
@@ -253,9 +246,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Contact Us!</h2>
                     <hr class="primary">
-                    <p>CLook is developed by two third year undergraduates at NSIT University of Delhi. Namrata Mukhija is pursuing B.E. in Information Technology and Ipshita Chatterjee is pursuing B.E. in Computer Engineering. Feel free to collaborate with us on this project. Fork on Github or send us a pull request. If you want to connect with us, reach out to us through LinkedIn and we'll get back to you as soon as possible!</p>
+                    {{ CLook is developed by two third year undergraduates at NSIT University of Delhi. Namrata Mukhija is pursuing B.E. in Information Technology and Ipshita Chatterjee is pursuing B.E. in Computer Engineering. Feel free to collaborate with us on this project. Fork on Github or send us a pull request. If you want to connect with us, reach out to us through LinkedIn and we'll get back to you as soon as possible! }}
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-github-square fa-3x sr-contact"></i>
@@ -278,18 +271,18 @@
     </section>
 <!--Contact information section end-->
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="{{ url_for('static',filename='vendor/jquery/jquery.min.js') }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static',filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="{{ url_for('static',filename='vendor/scrollreveal/scrollreveal.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='vendor/magnific-popup/jquery.magnific-popup.min.js') }}"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+    <script src="{{ url_for('static',filename='js/creative.min.js') }}"></script>
 
 </body>
 
