--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -140,7 +140,7 @@
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a href="{{ url_for('static',filename='img/portfolio/fullsize/1.jpg') }}" class="portfolio-box">
-                        <img src="{{ ur_for('static',filename='img/portfolio/thumbnails/1.jpg') }}" class="img-responsive" alt="">
+                        <img src="static/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="{{ url_for('static',filename='img/portfolio/fullsize/3.jpg') }}" class="portfolio-box">
-                        <img src="{{ url_for('static',filename='img/portfolio/thumbnails/3.jpg) }}" class="img-responsive" alt="">
+                        <img src="static/img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="static/img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="static',filename='img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <img src="static/img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <!--<div class="project-category text-faded">
@@ -248,7 +248,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contact Us!</h2>
                     <hr class="primary">
-                    {{ CLook is developed by two third year undergraduates at NSIT University of Delhi. Namrata Mukhija is pursuing B.E. in Information Technology and Ipshita Chatterjee is pursuing B.E. in Computer Engineering. Feel free to collaborate with us on this project. Fork on Github or send us a pull request. If you want to connect with us, reach out to us through LinkedIn and we'll get back to you as soon as possible! }}
+                    <p>CLook is developed by two third year undergraduates at NSIT University of Delhi. Namrata Mukhija is pursuing B.E. in Information Technology and Ipshita Chatterjee is pursuing B.E. in Computer Engineering. Feel free to collaborate with us on this project. Fork on Github or send us a pull request. If you want to connect with us, reach out to us through LinkedIn and we'll get back to you as soon as possible!</p>                    
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-github-square fa-3x sr-contact"></i>
@@ -271,18 +271,18 @@
     </section>
 <!--Contact information section end-->
     <!-- jQuery -->
-    <script src="{{ url_for('static',filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="static/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ url_for('static',filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="{{ url_for('static',filename='vendor/scrollreveal/scrollreveal.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='vendor/magnific-popup/jquery.magnific-popup.min.js') }}"></script>
+    <script src="static/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="static/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="{{ url_for('static',filename='js/creative.min.js') }}"></script>
+    <script src="static/js/creative.min.js"></script>
 
 </body>
 
